--- a/pinterest.html
+++ b/pinterest.html
@@ -74,7 +74,7 @@
 		<div class="pageitem">
 			<p class="description_txt"> <span class= "boldwrd"> Background and Context </span> </p>
 			<div class="pics" id="his" >
-				<p class="description_txt_1"> I have become an avid user of Pinterest because of my position as a Creative Director for my university's arts and fashion publication. The platform has been extremely useful for my team and I, and it has become a central way for me to put together creative inspiration. As a Creative Director, I am responsible for creating a theme that can support four print shoots for each biannual issue that we produce. Pinterest has been the easiest way for me find and group images that materialize our concepts for moodboards and slide decks. 
+				<p class="description_txt_1"> I have become an avid user of Pinterest because of my position as a Creative Director for my university's arts and fashion publication. The platform has been extremely useful for my team and I, and it has become a central way for me to put together creative inspiration. As a CD, I am responsible for creating a theme that can support four print shoots for each biannual issue that we produce. Pinterest has been the easiest way for me find and group images that materialize our concepts for moodboards and slide decks. 
 				<br> <br> Working on this design project alone was definitely intimidating because I didn't want this project to simply reflect my own, preexisting perspective of Pinterest and I believe that collaboration can always bring in well-rounded and valuable insight. I tried as best I could to be self aware of my biases going in, and that this project will not be inclusive or representative of all Pinterest users due to the constraints of this design challenge.
 				</p>
 				
@@ -321,35 +321,56 @@
 
 
 
-		<p class="description_txt"> <span class= "boldwrd"> III. Prototyping </span> </p> <br>
+		<p class="description_txt"> <span class= "boldwrd"> III. Design </span> </p> <br>
 
 		<div class="pageitem">
-			<p class="description_txt"> <span class= "boldwrd"> Sketching </span> </p>
+			<p class="description_txt"> <span class= "boldwrd"> First Iteration </span> </p>
 			<div class="pics">
-				<p class="description_txt_1"> Sketches for the tablet interface and website wireframe. </p> 
-
-				<img class="portpics" src="assets/img/sketch1.jpg" height ="300px" data-aos="fade-up" >
-				<img class="portpics" src="assets/img/sketch2.jpg" height ="300px" data-aos="fade-up" >
-				<img class="portpics" src="assets/img/sketch3.jpg" height ="300px" data-aos="fade-up" >
-				<img class="portpics" src="assets/img/sketch4.jpg" height ="300px" data-aos="fade-up" >
+				<img src="assets/img/newhome.png" width="700px" data-aos="fade-up" >
 				
 			</div>
 		</div>
 		
-		
+		<p class="description_txt"> <span class= "boldwrd"> IV. User Feedback </span> </p>
+		<div class="pageitem">
+			<div class="pics">
+				<p class="description_txt"> <span style="font-weight: 600; font-size: 23px; color:#bf3e00 "> 
+				Lily </span> </p>
+			</div>
+			
+			<div class="pics">
+				<ul class="description_txt_1">
+				<li>She loved: </li>
+				<li>She wished: </li>
+			</ul>
+			</div>
+		</div>
+		<div class="pageitem">
+			<div class="pics">
+				<p class="description_txt"> <span style="font-weight: 600; font-size: 23px; color:#bf3e00 "> 
+				Milly </span> </p>
+			</div>
+
+			<div class="pics">
+				<ul class="description_txt_1">
+				<li>She loved: </li>
+				<li>She wished: </li>
+			</ul>
+			</div>
+			
+		</div>
+		<div class="pics">
+			
+		</div>
 
 
-		<p class="description_txt"> <span class= "boldwrd"> IV. Final Prototype </span> </p>
+		<p class="description_txt"> <span class= "boldwrd"> V. Final Prototype </span> </p>
 		<div class="pics">
-			<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FmHWWqGJwpC5Lp10Plp8Bwo%2Fpapaya%3Fnode-id%3D1%253A3%26scaling%3Dscale-down&chrome=DOCUMENTATION" allowfullscreen></iframe>
-			<p class="description_txt_1"> <br> The final version of the app.  </p> 
+			<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Ftj9omG9CO4XwqVcvWhwywG%2FUntitled%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+			<p class="description_txt_1"> <br> The final version of the Home Page </p> 
 		</div>
 		
-		<p class="description_txt"> <span class= "boldwrd"> V. User Feedback </span> </p>
-		<div class="pics">
-			<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FmHWWqGJwpC5Lp10Plp8Bwo%2Fpapaya%3Fnode-id%3D1%253A3%26scaling%3Dscale-down&chrome=DOCUMENTATION" allowfullscreen></iframe>
-			<p class="description_txt_1"> <br> The final version of the app.  </p> 
-		</div>
+		
 		
 
 		<p class="description_txt"> <span class= "boldwrd"> Reflection + Next Steps </span> </p>
