--- a/pinterest.html
+++ b/pinterest.html
@@ -366,7 +366,7 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> V. Final Prototype </span> </p>
 		<div class="pics">
-			<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Ftj9omG9CO4XwqVcvWhwywG%2FUntitled%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+			<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Ftj9omG9CO4XwqVcvWhwywG%2FPinterest-Home-Page-Redesign%3Fnode-id%3D1%253A2%26viewport%3D475%252C539%252C0.5241057276725769%26scaling%3Dmin-zoom" allowfullscreen></iframe>
 			<p class="description_txt_1"> <br> The final version of the Home Page </p> 
 		</div>
 		
