--- a/pinterest.html
+++ b/pinterest.html
@@ -44,9 +44,7 @@
 	<div class="container">
 		<p class="dTitle"> Pinterest Redesign </p>
 		<div class="description">
-			<p class="description_txt"> Papaya is a virtual wallet that allows users to securely store payment cards, identification information, and retail cards. It comes as a suite of products: an app, wallet sized tablet, or keychain.
-			
-			<br> View our full project <a href="https://www.behance.net/gallery/102421787/papaya" target="_blank"> here. </a>
+			<p class="description_txt"> For my application to the Kleiner Perkins Design Fellowship, I redesigned the Home Page of Pinterest. </p>
   
 				<br> 
 				<div class="specs_txt">
