--- a/pinterest.html
+++ b/pinterest.html
@@ -44,7 +44,7 @@
 	<div class="container">
 		<p class="dTitle"> Pinterest Redesign </p>
 		<div class="description">
-			<p class="description_txt"> For my application to the Kleiner Perkins Design Fellowship, I redesigned the Home Page of Pinterest. </p>
+			<p class="description_txt"> For my application to the Kleiner Perkins Design Fellowship, I redesigned the Home Page of Pinterest and implemented a feature allowing users to manually change the content prediction algorithm. </p>
   
 				<br> 
 				<div class="specs_txt">
