--- a/pinterest.html
+++ b/pinterest.html
@@ -330,10 +330,12 @@
         
     });
 
-    var workitems = [{'title':'His Pills', 'link':'his.html'}, {'title':'Exhale', 
+    var workitems = [{'title':'His Pills', 'link':'his.html'},
+    {'title': 'Papaya', 'link':'papaya.html'},
+    {'title':'Pinterest Redesign', 
+	'link': 'pinterest.html'}, {'title':'Exhale', 
 	'link': 'exhale.html'}, {'title': 'BARE', 'link':'misc.html'},
 	{'title': 'Lightning McQueen', 'link':'light.html'},
-	{'title': 'Papaya', 'link':'papaya.html'},
 	{'title': 'Graphics', 'link':'graphics.html'},
 	];
 
