--- a/misc.html
+++ b/misc.html
@@ -128,10 +128,12 @@
         duration: 1000, // values from 0 to 3000, with step 50ms
         
     });
-    var workitems = [{'title':'His Pills', 'link':'his.html'}, {'title':'Exhale', 
+    var workitems = [{'title':'His Pills', 'link':'his.html'},
+    {'title': 'Papaya', 'link':'papaya.html'},
+    {'title':'Pinterest Redesign', 
+	'link': 'pinterest.html'}, {'title':'Exhale', 
 	'link': 'exhale.html'}, {'title': 'BARE', 'link':'misc.html'},
 	{'title': 'Lightning McQueen', 'link':'light.html'},
-	{'title': 'Papaya', 'link':'papaya.html'},
 	{'title': 'Graphics', 'link':'graphics.html'},
 	];
 
