--- a/pinterest.html
+++ b/pinterest.html
@@ -277,9 +277,7 @@
 			</div>
 			
 		</div>
-		<div class="pics">
-			
-		</div>
+		
 
 
 		<p class="description_txt"> <span class= "boldwrd"> V. Final Prototype </span> </p>
@@ -293,12 +291,17 @@
 
 		<p class="description_txt"> <span class= "boldwrd"> Reflection + Next Steps </span> </p>
 			<p class="description_txt_1">
+				<br>
 				This project was honestly pretty intimidating and difficult to complete, but overall, I'm really proud of how it has turned out. Pinterest is one of my favorite and most frequently used applications, throughout this entire process I was questioning whether the changes and design decisions I was making were valid considering how strong the Pinterest research, design, and development teams are. Ultimately, I was happy with the direction I ended up taking with this project, by deciding to focus on the algorithmic aspect of Pinterest as a social media. I’m really fascinated by the idea about social media that if you are not paying for the product, you are the product, and I thought that a tool letting users manually determine their content prediction would be very powerful and eye-opening to users, advertisers, and social media applications. <br>
 				<br>
 
 				Overall, this was a fun, challenging, and learning experience. I deeply respect and appreciate the designers and developers at Pinterest, it is so evident how hard they have worked to create a beautiful and usable experience. I would love to receive feedback on my designs with how effective they were in communicating my concepts, and how well they align with Pinterest’s existing mission.
 
-			</p> <br> <br> <br> <br>
+			</p> <br> 
+		<div class="pageitem"> 
+			<a href="kpresponse.html" target="_blank" class="sidebar_item" style="font-size: 25px">  Read Next: Personal Statements </a> <br> <br> <br> <br> <br> <br>
+		</div>
+		
 		
 
 	
