--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<title> Home | Anissa Rashid</title>
 
 </head>
 <body>
