--- a/his.html
+++ b/his.html
@@ -17,6 +17,7 @@
 	</script>
 
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<title>His Pills | Anissa Rashid</title>
 
 </head>
 
