--- a/misc.html
+++ b/misc.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico?">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<title>BARE Magazine | Anissa Rashid</title>
 </head>
 <body>
 	
