--- a/pinterest.html
+++ b/pinterest.html
@@ -17,6 +17,7 @@
 	</script>
 
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<title>Kleiner Perkins | Anissa Rashid</title>
 
 </head>
 
