--- a/resume.html
+++ b/resume.html
@@ -17,6 +17,7 @@
 	</script>
 
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<title>Resume | Anissa Rashid</title>
 
 </head>
 
