--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 			<img class="contactpic" src="assets/img/pfp2.png" width ="300px" > 
 			<h1 class="ml6">
 			  <span class="text-wrapper">
-			    <span class="letters">nice to meet you :-)</span>
+			    <span class="letters"></span>
 			  </span>
 			</h1>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
@@ -52,9 +52,9 @@
 			<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and finding new music via the <a href="https://open.spotify.com/user/anissarashid?si=TwCAnM2VQwqsE9DBxpDFXA" target="_blank"> Spotify </a> related artists tab. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
 			
 			<br>
-			<br><a class="sidebar_item" href = "resume.html" target="_blank" style="text-decoration: underline; font-size: 24px;"> Resume </a>, 
-			<a class="sidebar_item" href = "https://www.linkedin.com/in/anissarashid/" target="_blank" style="text-decoration: underline; font-size: 24px;" >    LinkedIn </a>,  
-			<a class="sidebar_item" href = "https://github.com/anissarashid" target="_blank" style="text-decoration: underline; font-size: 24px; ">    Github </a>.
+			<br><a class="sidebar_item" href = "resume.html" target="_blank" style="text-decoration: underline; font-size: 24px;"> resume <span>&#8599;</span> </a>, 
+			<a class="sidebar_item" href = "https://www.linkedin.com/in/anissarashid/" target="_blank" style="text-decoration: underline; font-size: 24px;" >    linkedin <span>&#8599;</span> </a>,  
+			<a class="sidebar_item" href = "https://github.com/anissarashid" target="_blank" style="text-decoration: underline; font-size: 24px; ">    github  <span>&#8599;</span></a>.
 
 
 
