--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 
 	<div class="pagecont">
 	<div class="container">
-		<img src="assets/img/resume.png" style="max-width: 80%;">
+		<img src="assets/img/anissarashid.resume.png" style="max-width: 80%;">
 
 	
 
