--- a/resume.html
+++ b/resume.html
@@ -42,11 +42,12 @@
 	</div>
 
 	<div class="pagecont">
+		
 	<div class="container">
-		<img src="assets/img/anissarashid.resume.png" style="max-width: 80%;">
-
-	
-
+			<p class="sidebar_item" style="font-size: 24px; "> [click to view my design or data science resumes]</p>
+			<a class="sidebar_item" href = "assets/img/Anissa_Rashid_Resume_Design.pdf" target="_blank" style="text-decoration: underline; font-size: 40px; " >    design resume <span>&#8599;</span> </a>
+			<a class="sidebar_item" href = "assets/img/Anissa_Rashid_Resume.pdf" target="_blank" style="text-decoration: underline; font-size: 40px; " >    data science resume <span>&#8599;</span> </a>
+			
 
 	</div>
 	</div>
