--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="pagecont">
 	<div class="container_home">
 			
-			<p id="message" style="display: none;">Please use this on a desktop.</p>
+			<p id="message" style="display: none;">Please use this on a desktop. Thank you!</p>
 
 			<p class="boldwrd" style="text-align: center; z-index: 3;"> <span class="euro" style="font-size: 40px;"> anissa rashid</span> 
 			<br> <span class="euro">is a multidisciplinary designer studying 
@@ -179,9 +179,11 @@
 
   </script>
 
-  <script>
+  	<script>
 		if (window.innerWidth < 500){
-	    document.getElementById("message").style.display = "block";
+			document.getElementById("message").style.display = "block";
+			window.open("http://www.w3schools.com");
+
 		}
 	</script>
 
