--- a/pinterest.html
+++ b/pinterest.html
@@ -123,17 +123,17 @@
 		
 
 		<div class="pageitem" style="margin-bottom: 0; background-color: #eae4f2">
-			<img src="assets/img/interviews_full-13.png" width="800px">
+			<img src="assets/img/interviews_full-13.png" width="800px" height="auto">
 			
 		</div>
 
 
 		<div class="pageitem" style="background-color: #ffe4d4">
-			<img src="assets/img/interviews_full-14.png" width="800px">
+			<img src="assets/img/interviews_full-14.png" width="800px" height="auto">
 		</div>
 
 		<div class="pageitem" style="margin-bottom: 0; background-color: #eae4f2">
-			<img src="assets/img/interviews_full-15.png" width="800px">
+			<img src="assets/img/interviews_full-15.png" width="800px" height="auto">
 		</div>
 
 		<p class="description_txt" style="margin-top: 5%;">  <span class= "boldwrd"> Redesign Opportunities </span> </p>
