--- a/exhale.html
+++ b/exhale.html
@@ -23,7 +23,6 @@
 			<div class="bottommenu">
 				<a href="index.html" class="contact" id= 'work'> work </a>
 				<a href = "contact.html" class="contact"> about </a>
-				<a href = "resume.html" class="contact" > resume </a>	
 			</div>
 				
 		</div>
@@ -34,59 +33,18 @@
 	<div class="container">
 		<p class="dTitle">Exhale</p>
 		<div class="description">
-			<p class="description_txt"> As a project for Visual Thinking (Fall 2019), I created this simple site as a response to our prompt of creating a distributable, nondiscrete piece of art. 
-				<br> I noticed that mental health on college campuses is often neglected, so I wanted to design a website to target one facet of this complex issue. I decided to build a website with a breathing activity, which I saw as a potential solution to help reduce some of the stress students experience, and wanted to ensure that this resource was accessible and intuitive to use.  <br>
-
-				<div class="specs_txt">
-					<div>
-						<br> <span style="font-weight: 600;"> Timeline: </span> 
-						<br> November - December 2019
-					</div>
-					<div>
-						<br> <span style="font-weight: 600;"> Tools: </span> 
-						<br> Adobe Illustrator, HTML/CSS, three.js
-					</div>
-					<div>
-						<br> <span style="font-weight: 600;"> Team: </span>
-						<br> Reese Gyllenhammer <br>
-					</div>
-
-				</div>
-		</div>
-
-		<div class="pageitem">
-			<p class="description_txt"> <span class= "boldwrd"> Sketch: </span> </p>
-			<div class="pics">
-				<p class="description_txt_1"> My initial thought was to create a circle expanded and contracted to the rhythm of a breath that looked like the picture above. </p>
-				<img class="portpics" src="assets/img/plswork.png" width="300px" >
-				<img class="portpics" src="assets/img/inhale2.png" width="300px" >
-				<img class="portpics" src="assets/img/circle.png" width="300px" >
-				
-			</div>
-			
+			<p class="description_txt"> Creating a distributable, nondiscrete piece of art in the form of a digital breathing exercise. 
 		</div>
 		
 		
-		<p class="description_txt"> <span class= "boldwrd"> Website: </span> </p>
+		<p class="description_txt"> <span class= "boldwrd"> Site: </span> </p>
 		<div class="pics">
 			<a href="https://anissarashid.github.io/exhale/" target="_blank">
 			<video class="portpics" width="700" preload controls autoplay loop muted data-aos="fade-up" >
 				<source src="assets/img/exhale.mp4">
 			</video>
 			</a>
-			<p class="description_txt_1"> I used three.js - a JavaScript 3D library - to create 3D objects that were scaled using a sine function, in order to best replicate the breath. Check out the full project on github <a href="https://github.com/anissarashid/exhale" target="_blank" > here.</a> </p>
 		</div>
-
-		
-		<p class="description_txt"> <span class= "boldwrd"> Branding Materials: </span> </p>
-		<div class="pics">
-			<img class="portpics" src="assets/img/stickernew.png" width="600px" data-aos="fade-up">
-			<img class="portpics" src="assets/img/stickernew2.png" width="600px" data-aos="fade-up">
-			<p class="description_txt_1"> These are two sticker or flyer designs that could be printed and distributed around UC Berkeley in order to spread awareness of this digital tool. </p> <br> <br>
-
-		</div>
-		
-
 	
 
 
@@ -113,7 +71,6 @@
     });
 
     var workitems = [{'title':'His Pills', 'link':'his.html'},
-    {'title': 'Papaya', 'link':'papaya.html'},
     {'title':'Pinterest Redesign', 
 	'link': 'pinterest.html'}, {'title':'Exhale', 
 	'link': 'exhale.html'}, {'title': 'BARE', 'link':'misc.html'},
