--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,7 @@
 		<div id="leftmenu">
 			<div class="bottommenu">
 				<a href="index.html" class="contact" id= 'work'> work </a>
-				<a href = "contact.html" class="contact"> about </a>
-				<a href = "resume.html" class="contact" > resume </a>	
+				<a href = "contact.html" class="contact"> about </a>	
 			</div>
 				
 		</div>
@@ -45,15 +44,11 @@
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 		</div>
 		<div class="picss" id = "contact">
-			<p class="description_txt" style="margin-top: 0;"> Hello! My name is Anissa (she/her) and I'm currently studying Data Science and Economics at UC Berkeley. I'm an aspiring product designer and believe in building research-driven and community-based experiences.
-
-			 <br><br> My education has given me a multidisciplinary foundation in statistics, programming, and economics, while also granting me the freedom to explore design. I've always been a creatively inclined person, leaning towards art and <a href="http://www.baremagazine.org/mine" target="_blank"> photography</a> as a form of expression and way to represent my communities. After taking my first <a href="az.html" target="_blank" > web design course,</a> I've found design to be the optimal intersection between my technical and creative interests. 
-
-			<br><br> In my free time, I enjoy brewing coffee, taking care of my house plants, and finding new music via the <a href="https://open.spotify.com/user/anissarashid?si=TwCAnM2VQwqsE9DBxpDFXA" target="_blank"> Spotify </a> related artists tab. I'm always looking for opportunities to grow and develop as a designer, if any of the above is of interest please feel free to reach out to me at <a href="mailto: anissarashid@berkeley.edu"> anissarashid@berkeley.edu! </a>
+			<p class="about_txt" style="margin-top: 0;"> Hello! I'm Anissa (uh-nees-ah), currently a Software Engineer at <a href="https://www.petalcard.com/" style="color: #1200db;">Petal</a>, working on Data Infrastructure. I have a background in Data Science, Economics, and Design at UC Berkeley. <br>
+			<br> This is an archive of my projects from Berkeley, and a space to share my future creative work.
 			
 			<br>
-			<br><a class="sidebar_item" href = "resume.html" target="_blank" style="text-decoration: underline; font-size: 24px;"> resume <span>&#8599;</span> </a>, 
-			<a class="sidebar_item" href = "https://www.linkedin.com/in/anissarashid/" target="_blank" style="text-decoration: underline; font-size: 24px;" >    linkedin <span>&#8599;</span> </a>,  
+			<br><a class="sidebar_item" href = "https://www.linkedin.com/in/anissarashid/" target="_blank" style="text-decoration: underline; font-size: 24px;" >linkedin <span>&#8599;</span> </a>,  
 			<a class="sidebar_item" href = "https://github.com/anissarashid" target="_blank" style="text-decoration: underline; font-size: 24px; ">    github  <span>&#8599;</span></a>.
 
 
@@ -103,7 +98,6 @@
   });
 
   var workitems = [{'title':'His Pills', 'link':'his.html'},
-    {'title': 'Papaya', 'link':'papaya.html'},
     {'title':'Pinterest Redesign', 
 	'link': 'pinterest.html'}, {'title':'Exhale', 
 	'link': 'exhale.html'}, {'title': 'BARE', 'link':'misc.html'},
