--- a/graphics.html
+++ b/graphics.html
@@ -23,7 +23,6 @@
 			<div class="bottommenu">
 				<a href="index.html" class="contact" id= 'work'> work </a>
 				<a href = "contact.html" class="contact"> about </a>
-				<a href = "resume.html" class="contact" > resume </a>	
 			</div>
 				
 		</div>
@@ -34,7 +33,7 @@
 	<div class="container" style="max-width: 950px; width: 100%;">
 		<p class="dTitle"> Graphics </p>
 		<div class="description">
-			<p class="description_txt"> A collection of my work in Adobe Illustrator and Photoshop.
+			<p class="description_txt"> Made in Adobe Illustrator and Photoshop.
 			</p>
 			
 		</div>
@@ -46,8 +45,6 @@
 			<img class="portpics" id="graph" src="assets/img/barespecial1.png" width="400px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/barespecial3.png" width="400px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/sango.png" width="500px" data-aos="fade-up">
-			<img class="portpics" id="graph" src="assets/img/tally2-01.png" width="400px" data-aos="fade-up">
-			<img class="portpics" id="graph" src="assets/img/meagain-01.png" width="400px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/sf.png" width="450px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/earth-07.png" width="400px" data-aos="fade-up">
 			<img class="portpics" id="graph" src="assets/img/bamfest1.png" width="400px" data-aos="fade-up">
@@ -81,7 +78,6 @@
     });
 
     var workitems = [{'title':'His Pills', 'link':'his.html'},
-    {'title': 'Papaya', 'link':'papaya.html'},
     {'title':'Pinterest Redesign', 
 	'link': 'pinterest.html'}, {'title':'Exhale', 
 	'link': 'exhale.html'}, {'title': 'BARE', 'link':'misc.html'},
